--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav mx-auto over">
                         <li class="nav-item px-lg-4"><a class="nav-link text-uppercase" href="index.html">Home</a></li>
-                        <li class="nav-item px-lg-4"><a class="nav-link text-uppercase" href="/html/resume.html">Résumé</a></li>
-                        <li class="nav-item px-lg-4"><a class="nav-link text-uppercase" href="/html/aboutme.html">About</a></li>
-                        <li class="nav-item px-lg-4"><a class="nav-link text-uppercase" href="/html/tableau.html">Tableau</a></li>
+                        <li class="nav-item px-lg-4"><a class="nav-link text-uppercase" href="html/resume.html">Résumé</a></li>
+                        <li class="nav-item px-lg-4"><a class="nav-link text-uppercase" href="html/aboutme.html">About</a></li>
+                        <li class="nav-item px-lg-4"><a class="nav-link text-uppercase" href="html/tableau.html">Tableau</a></li>
                     </ul>
                 </div>
             </div>
